3.4.3/_sources/gallery/images_contours_and_fields/contour_label_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/images_contours_and_fields/contour_label_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_contour_label_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours_and_fields_contour_label_demo.py:


==================
Contour Label Demo
==================

Illustrate some of the more advanced things that one can do with
contour labels.

See also the :doc:`contour demo example
</gallery/images_contours_and_fields/contour_demo>`.

.. GENERATED FROM PYTHON SOURCE LINES 12-17

.. code-block:: default


    import numpy as np
    import matplotlib.ticker as ticker
    import matplotlib.pyplot as plt








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Define our surface

.. GENERATED FROM PYTHON SOURCE LINES 19-28

.. code-block:: default


    delta = 0.025
    x = np.arange(-3.0, 3.0, delta)
    y = np.arange(-2.0, 2.0, delta)
    X, Y = np.meshgrid(x, y)
    Z1 = np.exp(-X**2 - Y**2)
    Z2 = np.exp(-(X - 1)**2 - (Y - 1)**2)
    Z = (Z1 - Z2) * 2








.. GENERATED FROM PYTHON SOURCE LINES 29-30

Make contour labels with custom level formatters

.. GENERATED FROM PYTHON SOURCE LINES 30-47

.. code-block:: default



    # This custom formatter removes trailing zeros, e.g. "1.0" becomes "1", and
    # then adds a percent sign.
    def fmt(x):
        s = f"{x:.1f}"
        if s.endswith("0"):
            s = f"{x:.0f}"
        return rf"{s} \%" if plt.rcParams["text.usetex"] else f"{s} %"


    # Basic contour plot
    fig, ax = plt.subplots()
    CS = ax.contour(X, Y, Z)

    ax.clabel(CS, CS.levels, inline=True, fmt=fmt, fontsize=10)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_001.png
    :alt: contour label demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <a list of 7 text.Text objects>



.. GENERATED FROM PYTHON SOURCE LINES 48-49

Label contours with arbitrary strings using a dictionary

.. GENERATED FROM PYTHON SOURCE LINES 49-63

.. code-block:: default


    fig1, ax1 = plt.subplots()

    # Basic contour plot
    CS1 = ax1.contour(X, Y, Z)

    fmt = {}
    strs = ['first', 'second', 'third', 'fourth', 'fifth', 'sixth', 'seventh']
    for l, s in zip(CS1.levels, strs):
        fmt[l] = s

    # Label every other level using strings
    ax1.clabel(CS1, CS1.levels[::2], inline=True, fmt=fmt, fontsize=10)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_002.png
    :alt: contour label demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <a list of 3 text.Text objects>



.. GENERATED FROM PYTHON SOURCE LINES 64-65

Use a Formatter

.. GENERATED FROM PYTHON SOURCE LINES 65-76

.. code-block:: default


    fig2, ax2 = plt.subplots()

    CS2 = ax2.contour(X, Y, 100**Z, locator=plt.LogLocator())
    fmt = ticker.LogFormatterMathtext()
    fmt.create_dummy_axis()
    ax2.clabel(CS2, CS2.levels, fmt=fmt)
    ax2.set_title("$100^Z$")

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_003.png
    :alt: $100^Z$
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 77-86

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.contour` / `matplotlib.pyplot.contour`
   - `matplotlib.axes.Axes.clabel` / `matplotlib.pyplot.clabel`
   - `matplotlib.ticker.LogFormatterMathtext`
   - `matplotlib.ticker.TickHelper.create_dummy_axis`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.306 seconds)


.. _sphx_glr_download_gallery_images_contours_and_fields_contour_label_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: contour_label_demo.py <contour_label_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: contour_label_demo.ipynb <contour_label_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
